--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
-plugins {
-    id 'java'
-}
-
-group 'javaFirst'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
+apply plugin: 'java'
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+dependencies{
+    compile 'org.testng:testng:6.9.10'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'org.apache.httpcomponents:httpclient:4.5.1'
+    compile 'org.apache.httpcomponents:fluent-hc:4.5.1'
+    compile 'com.jayway.restassured:rest-assured:2.9.0'
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+
 }
